# spinlet

./: .gitignore  .taplo.toml  Cargo.toml  README.md  build.rs  build.sh  debug.sh  install.sh  spin-pluginify.toml
.spinlet/: config.toml
.spinlet/etc/: clean.toml  echo.toml  new.toml  sh.toml  shell.toml  up.toml  update.toml
.spinlet/lib/: command.wasm  reactor.wasm
.spinlets/: new.wasm  shell.wasm  up.wasm  update.wasm  watch.wasm  workspace.wasm
adapters/: wasi_preview1_component_adapter.command.wasm  wasi_preview1_component_adapter.reactor.wasm
crates/config/: Cargo.toml
crates/config/src/: child.rs  current.rs  lib.rs  parent.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: access.rs  lib.rs
crates/manifest/src/access/: env.rs  fs.rs  io.rs
crates/manifest/src/access/env/: args.rs  var.rs
crates/manifest/src/access/fs/: dir.rs  file.rs
crates/manifest/src/access/io/: stderr.rs  stdin.rs  stdout.rs
crates/manifest/src/hook/: after.rs  before.rs  mod.rs
registry/: Cargo.toml  spin.toml
registry/.spinlet/etc/: boot.toml  echo.toml
registry/.spinlet/lib/: command.wasm
registry/src/: lib.rs
spinlets/: Cargo.toml
spinlets/src/: console.rs  env.rs  lib.rs  vfs.rs  workspace.rs
src/: cli.rs  command.rs  context.rs  executor.rs  lib.rs  manifest.rs  runtime.rs  spinlet.rs
src/cli/: args.rs  config.rs  mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/executor/: mod.rs
src/loader/: mod.rs
src/loader/context/: error.rs  mod.rs
src/manifest/: access.rs  error.rs  mod.rs
src/manifest/access/: env.rs  error.rs  fs.rs  io.rs
src/manifest/access/env/: args.rs  var.rs
src/manifest/access/fs/: dir.rs  file.rs
src/manifest/access/io/: stderr.rs  stdin.rs  stdout.rs
src/runner/: mod.rs
src/spin/: mod.rs
