[workspace]
members = ["spinlets", "registry"]

[package]
name = "spinlet"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Cardoso <matheus@cardo.so>"]

[dependencies]
clap = { version = "4", features = ["unicode", "env", "derive", "cargo", "string", "unstable-v5", "wrap_help", "unstable-styles"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
schemars = { version = "0.8", features = ["derive"] }
similar = "2"

async-trait = "0.1"
wit-bindgen = { version = "0.7" }
itertools = "0.10"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model", "wat"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", features = ["tokio"] }
