[workspace]
members = ["spinlets", "registry"]

[package]
name = "spinlet"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Cardoso <matheus@cardo.so>"]
repository = "https://github.com/cardoso/spinlet"
homepage = "https://github.com/cardoso/spinlet"

[dependencies]
clap = { version = "4", features = ["unicode", "env", "derive", "cargo", "string", "unstable-v5", "wrap_help", "unstable-styles"] }
human-panic = "1"

lazy_static = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.7", features = ["preserve_order"] }
toml_edit = { version = "0.19", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
similar = "2"

tokio = { version = "1", features = ["full"] }
wit-bindgen = { version = "0.7" }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model", "wat"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", features = ["tokio"] }
