[workspace]
members = ["spinlets", "registry", "crates/*"]

[package]
name = "spinlet"
version = "0.2.0"
edition = "2021"
description = "Spinlet is a plugin and runtime for building and running wasm32-wasi cli components as plugins for Spin."
readme = "README.md"
authors = ["Matheus Cardoso <matheus@cardo.so>"]
repository = "https://github.com/cardoso/spinlet"
homepage = "https://github.com/cardoso/spinlet"
documentation = "https://github.com/cardoso/spinlet"
license = "Apache-2.0 OR MIT"
rust-version = "1.71.0"
categories = ["command-line-utilities"]

keywords = ["wasm", "wasi", "cli", "plugin", "spin"]

[dependencies]
spinlet-config = { path = "crates/config" }
spinlet-manifest = { path = "crates/manifest" }
clap = { version = "4", features = ["unicode", "env", "derive", "cargo", "string", "unstable-v5", "wrap_help", "unstable-styles"] }
human-panic = "1"
anyhow = "1"
backtrace = "0.3"


lazy_static = "1"
tracing = "0.1"

toml = { version = "0.7", features = ["preserve_order"] }
toml_edit = { version = "0.19", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"

cap-primitives = "1"

tokio = { version = "1", features = ["full"] }

wit-bindgen = { version = "0.7" }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model", "wat"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", features = ["tokio"] }
