[package]
name = "spinlets"
authors = ["Spinlets"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
console = "0.15"
indicatif = "0.17"
dialoguer = { version = "0.10", features = ["fuzzy-matcher", "history", "tempfile"] }
getrandom = "0.2"
rustix  = "0.37"
cap-std = "1"
is-terminal = "0.4"